--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">
-            <div class="circle-button"></div>
-            <p>Página de prueba</p>
+        <div class="top-bar">
+            <div class="title">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>
+                <p>Página de prueba</p>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>
         </div>
         <div class="menu">
             <div class="items">
@@ -22,15 +25,15 @@
                 </div>
             </div>
             <div class="footer">
-                <p>Footer</p>
+                <p>Made by: Joseph Basto</p>
             </div>
-        </div>
-        <div class="top-bar">
-            <div class="circle-button"></div>
         </div>
         <div class="content">
             <div class="dashboard">
-
+                <p>Dashboard</p>
+                <div class="dashboard-content">
+                    
+                </div>
             </div>
         </div>
     </div>
