--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Prueba</title>
 </head>
 <body>
@@ -11,17 +11,55 @@
         <div class="top-bar">
             <div class="title">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>
-                <p>Página de prueba</p>
+                <p>Test page</p>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>
         </div>
         <div class="menu">
             <div class="items">
+                <div class="paragraph">
+                    <p>Dashboard</p>
+                </div>
+                <div class="paragraph">
+                    <p>Parrafo 1</p>
+                </div>
                 <div class="item">
                     <p>Item 1</p>
+                    <svg class="arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
                 </div>
                 <div class="item">
                     <p>Item 2</p>
+                </div>
+                <div class="item">
+                    <p>Item 3</p>
+                </div>
+                <div class="paragraph">
+                    <p>Parrafo 2</p>
+                </div>
+                <div class="item">
+                    <p>Item 1</p>
+                    <svg class="arrow-down" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                </div>
+                <div class="sub-item">
+                    <p>Sub Item 1</p>
+                </div>
+                <div class="sub-item">
+                    <p>Sub Item 2</p>
+                </div>
+                <div class="sub-item">
+                    <p>Sub Item 3</p>
+                </div>
+                <div class="sub-item">
+                    <p>Sub Item 4</p>
+                </div>
+                <div class="item">
+                    <p>Item 2</p>
+                </div>
+                <div class="item">
+                    <p>Item 3</p>
+                </div>
+                <div class="item">
+                    <p>Item 4</p>
                 </div>
             </div>
             <div class="footer">
