feat: :sparkles: Created menu and elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Ejercicio 1</title>
 </head>
 <body>
-
+    <div class="container">
+        <div class="top-bar">
+            <div class="logo">
+                <p>Throne</p>
+            </div>
+            <div class="menu">
+                <a href="" class="items">Inicio</a>
+                <a href="" class="items">About</a>
+                <a href="" class="items">Servicios</a>
+                <a href="" class="items">Contacto</a>
+            </div>
+            <div class="languages">
+                <div class="language-button">EN</div>
+                <div class="language-button">EUS</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
