feat: :sparkles: Added logo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <div class="container">
         <div class="top-bar">
-            <div class="logo">
-                <p>Throne</p>
-            </div>
+            <img src="storage/img/logo.png" alt="" class="logo">
             <div class="menu">
                 <a href="" class="items">Inicio</a>
                 <a href="" class="items">About</a>
