feat: :lipstick: Added style for the elements

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div class="top-bar">
             <img src="storage/img/logo.png" alt="" class="logo">
             <div class="menu">
-                <a href="" class="items">Inicio</a>
-                <a href="" class="items">About</a>
-                <a href="" class="items">Servicios</a>
-                <a href="" class="items">Contacto</a>
+                <a href="" class="item">Inicio</a>
+                <a href="" class="item">About</a>
+                <a href="" class="item">Servicios</a>
+                <a href="" class="item">Contacto</a>
             </div>
             <div class="languages">
-                <div class="language-button">EN</div>
-                <div class="language-button">EUS</div>
+                <a href="" class="language-button">EN</a>
+                <a href="" class="language-button">EUS</a>
             </div>
         </div>
     </div>
