feat: :sparkles: Created side menu

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Ejercicio 1</title>
 </head>
 <body>
-
+    <div class="container">
+        <div class="side-bar">
+            <div class="side-item">
+                <p>Inicio</p>
+                <a href="">Entrar</a>
+            </div>
+            <div class="side-item">
+                <p>About</p>
+                <a href="">Entrar</a>
+            </div>
+            <div class="side-item">
+                <p>Servicios</p>
+                <a href="">Entrar</a>
+            </div>
+            <div class="side-item">
+                <p>Contacto</p>
+                <a href="">Entrar</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
