feat: :sparkles: Created box with some text

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 3</title>
 </head>
 <body>
-
+    <div class="container">
+        <div class="box">
+            <p class="title">
+                I'm Centered!
+            </p>
+            <p class="text">
+                This box is both vertically and horizontally centered. Even if the text in this box changes to make it wider or taller, the box will still be centered. Go ahead, give it a try. Just click to edit the text.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
