--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 4</title>
 </head>
 <body>
-
+    <div class="container">
+        <div class="galery">
+            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+        </div>
+    </div>
 </body>
 </html>
