--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <div class="container">
         <div class="galery">
-            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
-            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
-            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
-            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
-            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
-            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
-            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
-            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
-            <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img class="image" src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img class="image" src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img class="image" src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img class="image" src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img class="image" src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img class="image" src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img class="image" src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img class="image" src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
+            <img class="image" src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="Photo de ejemplo">
         </div>
     </div>
 </body>
